--- a/starter.html
+++ b/starter.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My Page</title>
     <link rel="stylesheet" type="text/css" href="/css/master.css">
     <script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
+    <h1>Hello World</h1>
     <img src="images/image.png" alt="An Image" >
   </body>
 </html>
