--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="dat.gui.min.js"></script>
     <link href="fireworks.css" rel="stylesheet" type="text/css" media="all">
 </head>
