--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -6,8 +6,11 @@
 </head>
 
 <body>
-<div id="gui"></div>
+<!-- div id="gui"></div -->
 <div id="canvas-container">
+  <div id="winner" class="throbber">You Won!</div>
+
+  <a href="http://fvfr.com" id="clicker">Click here to see your score!</a>
   <div id="mountains2"></div>
   <div id="mountains1"></div>
   <div id="skyline"></div>
