--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -3,6 +3,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="dat.gui.min.js"></script>
     <link href="fireworks.css" rel="stylesheet" type="text/css" media="all">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
 </head>
 
 <body>
@@ -10,7 +12,7 @@
 <div id="canvas-container">
   <div id="winner" class="throbber">You Won!</div>
 
-  <a href="http://fvfr.com" id="clicker">Click here to see your score!</a>
+  <a href="https://slash.frvr.com/?s=website" id="clicker">Click here to see your score!</a>
   <div id="mountains2"></div>
   <div id="mountains1"></div>
   <div id="skyline"></div>
