--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+    <meta name = "viewport" content = "width = device-width">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- script src="dat.gui.min.js"></script -->
     <link href="fireworks.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-
+    <title>Animation Demo</title>
 </head>
 
 <body>
