--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    ``<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    ``<meta name="viewport" content="width=600px, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, scrolling=no" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- script src="dat.gui.min.js"></script -->
     <link href="fireworks.css" rel="stylesheet" type="text/css" media="all">
@@ -12,7 +12,6 @@
 <!-- div id="gui"></div -->
 <div id="canvas-container">
   <div id="winner" class="throbber">You Won!</div>
-
   <a href="https://slash.frvr.com/?s=website" id="clicker">Click here to see your score!</a>
   <div id="mountains2"></div>
   <div id="mountains1"></div>
