--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=512, height=768, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, scrolling=no" >
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <meta name="viewport" content="width=512, height=768, initial-scale=1.0, maximum-scale=5.0, user-scalable=no, scrolling=no" >
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" defer></script>
     <!-- script src="dat.gui.min.js"></script -->
     <link href="fireworks.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
