--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta content='width=device-width; initial-scale=1.0; maximum-scale=5.0; user-scalable=0;' name='viewport' />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
-    <!-- script src="dat.gui.min.js"></script -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>    <!-- script src="dat.gui.min.js"></script -->
     <link href="fireworks.css" rel="stylesheet" type="text/css" media="all">
     <title>Animation Demo</title>
 </head>
