--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width" />
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>    <!-- script src="dat.gui.min.js"></script -->
     <link href="fireworks.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="manifest" href="/manifest.json">
     <title>Animation Demo</title>
+
 </head>
 
 <body>
@@ -18,5 +20,26 @@
   <div id="skyline"></div>
 </div>
 <script src="fireworks.js"></script>
+<script>
+// This is the service worker with the Advanced caching
+
+// Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+
+// Check compatibility for the browser we're running this in
+if ("serviceWorker" in navigator) {
+  if (navigator.serviceWorker.controller) {
+    console.log("[EJN] active service worker found, no need to register");
+  } else {
+    // Register the service worker
+    navigator.serviceWorker
+      .register("serviceworker-sw.js", {
+        scope: "./"
+      })
+      .then(function (reg) {
+        console.log("[EJN] Service worker has been registered for scope: " + reg.scope);
+      });
+  }
+}
+</script>
 </body>
 </html>
