--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -49,7 +49,7 @@
 	      });
 	  }
 	}
-  document.addEventListener( "touchstart", function(e) {
+  addEventListener(document, "touchstart", function(e) {
     console.log(e.defaultPrevented);  // will be false
     e.preventDefault();   // does nothing since the listener is passive
     console.log(e.defaultPrevented);  // still false
