--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -49,12 +49,16 @@
 	      });
 	  }
 	}
-    document.addEventListener('wheel', (evt) => {
-      // ... do stuff with evt
-    }, {
-      capture: true,
-      passive: true
-    })
+    jQuery.event.special.touchstart = {
+      setup: function( _, ns, handle ){
+        if ( ns.includes("noPreventDefault") ) {
+          this.addEventListener("touchstart", handle, { passive: false });
+        } else {
+          this.addEventListener("touchstart", handle, { passive: true });
+        }
+      }
+    };
+
 </script>
 <script src="fireworks.js" defer>
 </script>
