--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -4,6 +4,7 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=0' name='viewport' />
 	<meta name="viewport" content="width=device-width" />
 	<meta name="Description" content="Simple Fireworks animation demo for an FSD">
+	<meta name="theme-color" content="#317EFB"/>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous" defer>
 	</script>
 <!-- script src="dat.gui.min.js"></script -->
