--- a/fireworks/fireworks.html
+++ b/fireworks/fireworks.html
@@ -10,6 +10,7 @@
 <!-- script src="dat.gui.min.js"></script -->
 	<link href="fireworks.css" rel="stylesheet" type="text/css" media="all">
 	<link rel="manifest" href="./manifest.json">
+	<link rel="apple-touch-icon" href="images/touch/icon-192x192.png">
 	<title>Animation Demo</title>
 </head>
 <body>
