--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ List of Apps
 </h1>
 <a href="./fireworks/fireworks.html">Fireworks</a> |
 <a href="./newsamp/index.html">News AMP Demo</a> |
-<a href="./pacman-pwa/starter.html">PacMan Game</a> |
+<a href="./pacman-pwa/index.html">PacMan Game</a> |
 
 <body>
 </html>
