--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a href="./fireworks/fireworks.html">Fireworks</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,13 +29,13 @@
             </a>
           </li>
           <li class="nav-item">
-<a href="./fireworks/fireworks.html">Fireworks</a> |
+<a class="nav-link" href="./fireworks/fireworks.html">Fireworks</a>
           </li>
           <li class="nav-item">
-<a href="./newsamp/index.html">News AMP Demo</a> |
+<a class="nav-link" href="./newsamp/index.html">News AMP Demo</a>
           </li>
           <li class="nav-item">
-<a href="./pacman-pwa/index.html">PacMan Game</a> |
+<a class="nav-link" href="./pacman-pwa/index.html">PacMan Game</a>
           </li>
         </ul>
       </div>
@@ -43,11 +43,7 @@
   </nav>
 
 <h1>
-List of R &amp; D Apps
+Additional of R &amp; D Demos
 </h1>
-<a href="./fireworks/fireworks.html">Fireworks</a> |
-<a href="./newsamp/index.html">News AMP Demo</a> |
-<a href="./pacman-pwa/index.html">PacMan Game</a> |
-
 <body>
 </html>
