--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a class="nav-link" href="./fireworks/fireworks.html">Fireworks</a>
           </li>
           <li class="nav-item">
-<a class="nav-link" href="./games_poc/build/index..html">Games POC</a>
+<a class="nav-link" href="./games_poc/build/index.html">Games POC</a>
           </li>
           <li class="nav-item">
 <a class="nav-link" href="./newsamp/index.html">News AMP Demo</a>
